@@ -1,3 +1,9 @@
+2013-09-25  Christopher Faylor  <me.cygwin2013@cgf.cx>
+	    Paul Kunysch  <paul.kunysch@emsys.de>
+
+	* thread.cc (semaphore::_getvalue): Set *sval as appropriate.  Set
+	errno and return -1 on error.
+
 2013-08-31  Corinna Vinschen  <corinna@vinschen.de>
 
 	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Belatedly bump
